# Klasifikasi-Hardware

./: Code.ipynb  README.md  pyproject.toml  requirements.txt
Code/: uap.py
classification/: app.py
