[project]
name = "wulan"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Wulan", email = "anishawulandarip@webmail.umm.ac.id"},
]
dependencies = ["streamlit>=1.41.1", "numpy>=2.2.1", "matplotlib>=3.10.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
